--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebApiDatabase": "Host=database; Port=5432; Database=ds; Username=postgres; Password=admin"
+    "WebApiDatabase": "Host=localhost; Port=5432; Database=ds; Username=postgres; Password=admin"
   },
   "Jwt": {
     "Key": "This is a sample secret key - please don't use in production environment.'"
