--- a/DS2022_30442_Presecan_Alexandru_Assignment_1_Backend.csproj
+++ b/DS2022_30442_Presecan_Alexandru_Assignment_1_Backend.csproj
@@ -11,6 +11,13 @@
 
   <ItemGroup>
     <PackageReference Include="Cake.Powershell" Version="2.0.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.50.0" />
+    <PackageReference Include="Grpc.AspNetCore.Web" Version="2.50.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.50.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.51.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNet.SignalR.Core" Version="2.4.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
@@ -28,5 +35,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.0" />
   </ItemGroup>
-
+  <ItemGroup>
+	  <Protobuf Include="*.proto" GrpcServices="Server" />
+  </ItemGroup>
 </Project>
